--- a/src/app/base.css
+++ b/src/app/base.css
@@ -36,7 +36,7 @@ html, body, #root {
     margin: 0;
 }
 
-html, input, select {
+html, input, select, button {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
 }
