--- a/src/panel/PanelContainer.module.css
+++ b/src/panel/PanelContainer.module.css
@@ -1,5 +1,20 @@
 .container {
+    display: grid;
+    grid-template-areas:
+        "dynamic"
+        "newToken";
+    grid-template-rows: auto 200px;
+    grid-template-columns: auto;
+
     background-color: #eceae0;
     border-left: 1px solid #757575;
+}
+
+.dynamic {
     overflow-y: auto;
+    grid-area: dynamic;
+}
+
+.newToken {
+    grid-area: newToken;
 }
